# PSU-CIDD-Malaria-Simulation

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  ChangeLogs.txt  Makefile  ModelDataCollector.cpp  README.md  main.cpp  pipeline_build.sh
.github/workflows/: ci.yml
Google_tests/: CMakeLists.txt  test1.cpp  test2.cpp
ext/easyloggingpp-9.97.0/: easylogging++.h
input/: input.yml  input_simple.yml  sample.yml
misc/: input.yml  input_DxG.yml  input_dev.yml  input_ee.yml
misc/MDA_AXX/: DxG_MDAXXX.txt  DxG_MDAXXX.xlsx  input_A1.yml  input_A1_OZFQ.yml  input_FLAL.yml  input_FLAL_KAFLUM.yml  input_FLAL_v2.yml  input_FLAL_v2_mu_0p001983.yml  input_generator_A1.py  input_generator_A1_EF40.py  input_generator_A1_EF80.py  input_generator_A1_OZFQ.py  input_generator_A1_mu_0p001983.py  input_generator_A4_varied_OZ_EF.py  input_generator_A5_varied_OZ_EF_mu.py  input_generator_FLAL.py  readme.txt  treatment_coverage_plot.py
misc/MDA_SPREAD/: input_A1.yml  input_generator_A1.py
misc/MDA_WHO_ERG_2018/: input_FLAL_40k_imp_no_itc_OZ_S3.4_v2.yml  input_FLAL_40k_imp_no_itc_OZ_v2.yml  input_FLAL_v2.yml  input_generator_FLAL_Figure2_SP60.py  input_generator_FLAL_Figure2_SP80.py  input_generator_FLAL_Figure2_corected_popsize.py  input_generator_FLAL_Figure3_SP60.py  input_generator_FLAL_Figure3_SP80.py  input_generator_FLAL_Figure3_corrected_popsize.py  input_generator_FLAL_FigureS1_corrected_popsize.py  input_generator_FLAL_FigureS2.py  input_generator_FLAL_FigureS4.1_corrected_popsize.py  input_generator_FLAL_Figure_S3.1_corrected_popsize.py  input_generator_FLAL_Figure_S3.2_corrected_popsize.py  input_generator_FLAL_Figure_S3.3_corrected_popsize.py  input_generator_FLAL_Figure_S3.4_corrected_popsize.py  input_generator_FLAL_SA.py  input_generator_FLAL_SA2.py  input_generator_FLAL_SA3.py  input_generator_FLAL_figure4_corrected_popsize.py  input_generator_FLAL_figure5_300k_corrected_popsize.py  input_generator_FLAL_figure5_40k_corrected_popsize.py  input_generator_FLAL_small_pop_size.py
misc/TACT_2020/: input_DxG_TACTX1.yml  input_DxG_TACTX2.yml  input_base_A11_mu_0p001983_v2.yml  input_base_A1_mu_0p001983.yml  input_base_A1_mu_0p001983_v2.yml  input_base_A2_mu_0p001983.yml  input_base_A2_mu_0p001983_v2.yml  input_base_A3_mu_0p001983.yml  input_base_A3_mu_0p001983_v2.yml  input_base_A7_mu_0p001983_v2.yml  input_base_A8_mu_0p001983_v2.yml  input_generator_A14_1M.py  input_generator_A1_1M_v2.py  input_generator_A2_1M_v2.py  input_generator_A3_1M_v2.py  input_generator_A5_1M.py  input_generator_A6_1M.py  input_generator_A7_1M.py  input_generator_AL_elimination.py  input_generator_ASAQ_elimination.py
misc/mmc/: generate_ec50_profiles_B1.py  generate_ec50_profiles_B1_min_max_scaled.py  generate_ec50_profiles_B1_sd_0p05.py  generate_ec50_profiles_B1_sd_0p10.py  generate_ec50_profiles_B1_sd_0p20.py  input_mmc_A4_mu_0p001983.yml
misc/novel_antimalarials/: B2_generator.py  B3_generator.py  B4_generator.py  C1_generator.py  C2_generator.py  C3_generator.py  C4_generator.py  C5_generator.py  C6_generator.py  P1_10x_mu_generator.py  P1_generator.py  P2_generator.py  P3_generator.py  P4_generator.py  input_novel_antimalarials.yml  input_novel_antimalarials_10x_mu.yml  input_novel_antimalarials_10x_mu_1d.yml  input_novel_antimalarials_1d.yml  input_novel_antimalarials_3d.yml  plot.py
misc/pkpd/: ec50_table.csv  ec50_table.py  input_DxG.yml
src/: CMakeLists.txt  Model.cpp  Model.h
src/Core/: Random.cpp  Random.h  Scheduler.cpp  Scheduler.h  TypeDef.h
src/DxGGenerator/: CMakeLists.txt  DxGGenerator_main.cpp  IndividualsFileReporter.cpp  PkPdReporter.cpp
src/EfficacyEstimator/: AppInput.h  CMakeLists.txt  PkPdReporter.cpp  PkPdReporter.h  README.md  main.cpp  plot.ipynb
src/Events/: BirthdayEvent.cpp  ProgressToClinicalEvent.cpp  ReceiveTherapyEvent.cpp  ReceiveTherapyEvent.h  TestTreatmentFailureEvent.cpp
src/Helpers/: NumberHelpers.h
src/MDC/: ModelDataCollector.cpp  ModelDataCollector.h
src/MaSim/: error_handler.hxx  main.cpp
src/Mosquito/: Mosquito.cpp  Mosquito.h
src/Parasites/: GeneInfo.h  Genotype.cpp  Genotype.h  GenotypeDatabase.cpp  GenotypeDatabase.h
src/Population/: ClonalParasitePopulation.cpp  ClonalParasitePopulation.h  DrugsInBlood.cpp  ImmunityClearanceUpdateFunction.cpp  Person.cpp  Person.h  Population.cpp  Population.h  SingleHostClonalParasitePopulations.cpp  SingleHostClonalParasitePopulations.h
src/Reporters/: ConsoleReporter.cpp  MMCReporter.cpp  MMCReporter.h  MonthlyReporter.cpp  MonthlyReporter.h  NovelDrugReporter.cpp  NovelDrugReporter.h  Reporter.cpp  Reporter.h  ReporterUtils.cpp  ReporterUtils.h  TACTReporter.cpp  ValidationReporter.cpp  ValidationReporter.h
src/Strategies/: AdaptiveCyclingStrategy.cpp  CyclingStrategy.cpp  IStrategy.cpp  IStrategy.h  MFTRebalancingStrategy.cpp  NestedMFTMultiLocationStrategy.cpp  NovelDrugIntroductionStrategy.cpp  NovelDrugIntroductionStrategy.h  NovelDrugSwitchingStrategy.cpp  NovelDrugSwitchingStrategy.h  StrategyBuilder.cpp  StrategyBuilder.h
src/Therapies/: Drug.cpp  Drug.h  DrugType.cpp  DrugType.h  SCTherapy.cpp  Therapy.cpp  Therapy.h  (+1 more)
test/: CMakeLists.txt  ConfigTest.cpp  CoordinateTest.cpp  Location.cpp  LocationTest.cpp  MockRandom.h  RandomTest.cpp  StringHelpersTest.cpp  TimeHelpersTest.cpp  main.cpp  test1.cpp
test/Core/: ConfigTest.cpp  StringHelpersTest.cpp  TimeHelpersTest.cpp
test/Core/Config/: ReadDrugDBTest.cpp  ReadGeneInfoTest.cpp  ReadInitialParasiteInfoTest.cpp  ReadMosquitoConfigTest.cpp  ReadOverrideEC50.cpp  UpdateMutationMaskTest.cpp
test/Core/Random/: RandomTest.cpp  RouletteTest.cpp
test/Mosquito/: MosquitoTest.cpp
test/Parasites/: GenotypeFreeRecombinationTest.cpp  GenotypeMatchPatternTest.cpp  GenotypeOverrideEC50Test.cpp  GenotypePerformMutationTest.cpp  GenotypeTest.cpp
test/Spatial/: CoordinateTest.cpp  LocationTest.cpp
test/old/: CMakeLists.txt
test/old/Core/Config/: ConfigTest.cpp
test/test_data/: input.yml
tests/: CMakeLists.txt  Coordinate.cpp  Location.h  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp
(+6641 files in other folders)
